--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           client_id: ${{ secrets.SOOS_CLIENT_ID }}
           api_key: ${{ secrets.SOOS_API_KEY }}
-          project_name: "sarif-test"
+          project_name: "soos-ent/github-demo"
           branch_name: ${{ github.ref }}
           commit_hash: ${{ github.sha }}
           scan_mode: "baseline"
