--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,18 @@ jobs:
           api_url: "https://api.soos.io/api/"
           target_url: "https://brokencrystals.com/"
           gpat: ${{ secrets.SOOS_GITHUB_PAT }}
+          
+  soos_sca:
+    name: SOOS SCA Scan
+    runs-on: ubuntu-latest
+    steps:
+      - uses: soos-io/soos-sca-github-action@v1.0.3-beta
+        name: SOOS SCA Scan
+        with:
+          client_id: ${{ secrets.SOOS_CLIENT_ID }}
+          api_key: ${{ secrets.SOOS_API_KEY }}
+          project_name: ${{ github.repository }}
+          branch_name: ${{ github.ref }}
+          commit_hash: ${{ github.sha }}
+          sarif: true
+          gpat: ${{ secrets.SOOS_GITHUB_PAT }}
